--- a/pages/index.html
+++ b/pages/index.html
@@ -1,13 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>Curso HTML 5 !!</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Primeiro exercício</title>
 </head>
 <body>
-
+    <h1>Olá, Mundo </h1>
+    <p>projeto curso HTML e CSS !!</p>
 </body>
-
-<p> Testando </p>
 </html>
-
