--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Olá, Mundo </h1>
-    <p> Projeto curso HTML e CSS </p>
+    <p> projeto curso HTML e CSS </p>
 </body>
 </html>
