--- a/pages/index.html
+++ b/pages/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Primeiro exercício</title>
+
+    <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
+    <title>Primeira página web</title>
 </head>
 <body>
-    <h1>Olá, Mundo </h1>
-    <hr>
+    <h1>Olá, Mundo em HTML5 e CSS3</h1>
+    <hr> <!-- &lt less than / &gt greater than -->
+    <h2>Comandos de textos: </h2>
     <p> projeto curso HTML e CSS </p>
+    <p>Operando as tags de estruturas de texto de página web:
+     <br> P- para paragrafos; <br> h1- para titulos; <br> br- para quebra de linha; <br>  </p>
+      <p>adicionar emoji: 🦊 <br> ou pode ser adicionado dessa forma : &#x1f98a  usando o parametro "&#x + o codigo do emoji". </div></p> <h2> Adicionando Imagens</h2> <p> Abaixo vc vai ver uma imagem que esta na mesma pasta do projeto da página. E vai aprender a manipular as imagens com Gimp..</p> <img src="img/html5ok.png" alt="logo HTML 5">  <br><br> <p> * Arquivo de subpastas.</p> <img src="img/css-logo ok.png" alt="logo CSS 3"> <br><P> * Arquivo da rede.</P><img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" alt="logo javascript"> <h3>Principais Marcações</h3> <h1>Principais formatações</h1> <h2>Negrito / Destaque</h2> <P>Nesta frase, temos um <strong> Termo em destaque / ,</strong> usando a tag Strong (semântica).</P>
+      <h2>Itálico / Ênfase</h2> 
+      <p>Nesta frase, tenho um <i> termo em itálico</i> usando a tag I (não semântico).</p>
+      <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag EM (semântico). </p>
+      <h2>Texto marcado</h2>
+      <p>Podemos criar também <mark style="background-color: darkorchid;">um texto marcado </mark> usando a tag Mark.</p>
+      <h2>Texto grande e pequeno</h2>
+      <p>Estamos criando um <big>texto grande</big> e um <smal> texto pequeno</smal> nesse parágrafo.</p>
+      <h2>Rexto inserido</h2>
+      <p>Podemos marcar <ins> um texto como inserido</ins> para indicar  ênfase e indicar que ele foi adicionado depois.</p>
+      <p>Existe também o <U> sublinhado </U> com a tag U (não semântico).</p>
+      <h2>Texto sobrescrito</h2>
+      <p>Para indicar coisas do tipo x<sup>20</sup>+3.</p>
+      <h2>Texto subscrito</h2>
+      <p>inserir coisas do tipo H<sub>2</sub>O.</p>
+
+
 </body>
 </html>
