--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+
 <head>
+  
+    <link rel="stylesheet" href="application.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +12,7 @@
     <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
     <title>Primeira página web</title>
 </head>
+
 <body>
     <h1>Olá, Mundo em HTML5 e CSS3</h1>
     <hr> <!-- &lt less than / &gt greater than -->
