--- a/pages/index.html
+++ b/pages/index.html
@@ -2,15 +2,7 @@
 <html lang="pt-br">
 
 
-<header class="header">
-            <nav>
-                <ul class="menu">
-                    <li><a href="/">Comandos</a></li>
-                    <li><a href="/">Texto</a></li>
-                    <li><a href="/">Sobre</a></li>
-                </ul>
-            </nav>
-   
+<head>
     <link rel="stylesheet" href="application.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +10,18 @@
 
     <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
     <title>Primeira página web</title>
-</ul>
-</nav>
 
+        <header class="header">
+            <nav>
+                <ul class="menu">
+                    <li><a href="/">Comandos</a></li>
+                    <li><a href="/">Texto</a></li>
+                    <li><a href="/">Sobre</a></li>
+                </ul>
+            </nav>
+        </header>     
     
-</header>
+</head>
 
 <body>
 
