--- a/pages/pages/pag.html
+++ b/pages/pages/pag.html
@@ -21,29 +21,29 @@
 
     <h1>Section Flexbox</h1>
 
-    <section class="flexbox">
+    <section class="flex">
         <div>
             <img src="img2/bng.jpg">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div>
         <div>
             <img src="/pages/img2/bng.jpg">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div>
         <div>
             <img src="/pages/img2/drn.jpg">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div>
         <div>
             <img src="/pages/img2/fd.png">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div>
         <div>
             <img src="/pages/img2/tl.jpg">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div> <div>
             <img src="/pages/img2/bng.jpg">
-            <p>Buraco Negros</p>
+            <p>Legendas</p>
         </div>
     </section>
     
