--- a/pages/pages/pag.html
+++ b/pages/pages/pag.html
@@ -23,7 +23,7 @@
 
     <section class="flex">
         <div>
-            <img src="img2/bng.jpg">
+            <img src="/pages/img2/bng.jpg">
             <p>Legendas</p>
         </div>
         <div>
