--- a/pages/pages/pag.html
+++ b/pages/pages/pag.html
@@ -27,7 +27,7 @@
             <p>Legendas</p>
         </div>
         <div>
-            <img src="/pages/img2/bng.jpg">
+            <img src="/pages/img2/6rd.gif">
             <p>Legendas</p>
         </div>
         <div>
@@ -45,6 +45,7 @@
             <img src="/pages/img2/bng.jpg">
             <p>Legendas</p>
         </div>
+        
     </section>
     
 </body>
