--- a/pages/pag.html
+++ b/pages/pag.html
@@ -23,26 +23,26 @@
 
     <section class="flex">
         <div>
-            <img src="/pages/img2/bng.jpg">
+            <img src="/pages/imge/bng.jpg">
             <p>Legendas</p>
         </div>
         <div>
-            <img src="/pages/img2/6rd.gif">
+            <img src="/pages/imge/drn.jpg">
             <p>Legendas</p>
         </div>
         <div>
-            <img src="/pages/img2/drn.jpg">
+            <img src="/pages/imge/fd.png">
             <p>Legendas</p>
         </div>
         <div>
-            <img src="/pages/img2/fd.png">
+            <img src="/pages/imge/tl.jpg">
             <p>Legendas</p>
         </div>
         <div>
-            <img src="/pages/img2/tl.jpg">
+            <img src="/pages/imge/bng.jpg">
             <p>Legendas</p>
         </div> <div>
-            <img src="/pages/img2/bng.jpg">
+            <img src="/pages/imge/drn.jpg">
             <p>Legendas</p>
         </div>
         
