--- a/pages/pages/three.html
+++ b/pages/pages/three.html
@@ -1,4 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="three.js" ></script>
+    <script>
 
 var scene = new THREE.Scene();
 var camera = new THREE.PerspectiveCamera(45,window.innerWidth/window.innerHeight,0.1,1000);
@@ -17,6 +27,6 @@ scene.add(cube);
 camera.position.z = 5;
 renderer.render(scene.camera);
 
-
-
-
+    </script>
+</body>
+</html>
