--- a/pages/pag.html
+++ b/pages/pag.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
     <title>StyleWeb</title>
 </head>
 <body>
