--- a/pages/pag_curso/guanabara.html
+++ b/pages/pag_curso/guanabara.html
@@ -11,16 +11,21 @@
     <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
     <title>Primeira página web</title>
 
-        <header class="header">
-            <nav>
-                <ul class="menu">
-                    <li><a href="/">Comandos</a></li>
-                    <li><a href="/">Texto</a></li>
-                    <li><a href="/">Sobre</a></li>
-                </ul>
-            </nav>
-        </header>     
-    
+    <header class="header">
+        <nav>
+            <ul class="menu">
+                <li><a href="/">Comandos</a></li>
+                <li><a href="/">Texto</a></li>
+                <li><a href="/">Sobre</a></li>
+            </ul>
+        </nav>
+    </header>
+    <style>
+        a {
+            display: block;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -37,44 +42,31 @@
             <img src="img/css-logo.png">
             <p>logo CSS</p>
         </div>
-        <div>
-            <img src="img/html5ok.png">
-            <p>logo html</p>
-        </div>
-        <div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg">
-            <p>logo mapa</p>
-        </div>
-        <div>
-            <img src="img/html5.png">
-            <p>logo html</p>
-        </div>
+
     </section>
     <hr> <!-- &lt less than / &gt greater than -->
-    <h2>Comandos de textos: </h2>
-    <p> projeto curso HTML e CSS </p>
-    <p>Operando as tags de estruturas de texto de página web:
-     <br> P- para paragrafos; <br> h1- para titulos; <br> br- para quebra de linha; <br>  </p>
-      <p>adicionar emoji: 🦊 <br> ou pode ser adicionado dessa forma : &#x1f98a  usando o parametro "&#x + o codigo do emoji". </div></p>
-       <h2> Adicionando Imagens</h2>
-       <p> Abaixo vc vai ver uma imagem que esta na mesma pasta do projeto da página. E vai aprender a manipular as imagens com Gimp..</p>
-       <h3>Principais Marcações</h3>
-        <h1>Principais formatações</h1> 
-        <h2>Negrito / Destaque</h2> 
-        <P>Nesta frase, temos um <strong> Termo em destaque / ,</strong> usando a tag Strong (semântica).</P>
-      <h2>Itálico / Ênfase</h2> 
-      <p>Nesta frase, tenho um <i> termo em itálico</i> usando a tag I (não semântico).</p>
-      <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag EM (semântico). </p>
-      <h2>Texto marcado</h2>
-      <p>Podemos criar também <mark style="background-color: darkorchid;">um texto marcado </mark> usando a tag Mark.</p>
-      <h2>Texto grande e pequeno</h2>
-      <p>Estamos criando um <big>texto grande</big> e um <smal> texto pequeno</smal> nesse parágrafo.</p>
-      <h2>Rexto inserido</h2>
-      <p>Podemos marcar <ins> um texto como inserido</ins> para indicar  ênfase e indicar que ele foi adicionado depois.</p>
-      <p>Existe também o <U> sublinhado </U> com a tag U (não semântico).</p>
-      <h2>Texto sobrescrito</h2>
-      <p>Para indicar coisas do tipo x<sup>20</sup>+3.</p>
-      <h2>Texto subscrito</h2>
-      <p>inserir coisas do tipo H<sub>2</sub>O.</p>
+    <h3>Comandos de formatação de textos: </h3>
+
+    <ul type="1">
+        <li>P- para paragrafos;</li>
+        <li>h1,h2,h3,h4,h5,h6- para hierarquia de titulos;</li>
+        <li>br- para quebra de linha;</li>
+        <li>&#x adicionar emoji: 🦊</li>
+        <li>a para âncorar links</li>
+
+    </ul>
+
+    <h4> Definição de HTML: </h4>
+
+
+    <P>
+       <abbr title="HyperText Markup Language"> HTML </abbr> abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de Marcação de
+        Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser
+        interpretados por navegadores. A tecnologia é fruto da junção entre os padrões HyTime e SGML.
+    </P>
+
+    <a href="https://www.youtube.com/watch?v=evBgLWQwAFA&list=RDGMEMQ1dJ7wXfLlqCjwV0xfSNbAVMY2AqeH1GPs4&index=3&ab_channel=NPRMusic"target="_blank">Musica
+    </a>
 </body>
+
 </html>
