--- a/pages/pag_modulos/landing_pg.html
+++ b/pages/pag_modulos/landing_pg.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balle Bot - Modere a sua comunodade do Discord</title>
+    <link rel="stylesheet" type="text/css" href="style_land.css">
 </head>
 
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="imge/Vector.png" alt="logo da cominidade Ballerine">
 <nav class="cabecalho-menu">
-<a  class="cabecalho-menu">Comunidade Balle Bot</a>
-<a  class="cabecalho-menu">Tutorial</a>
-<a  class="cabecalho-menu">Open Source</Source></a>
-<a  class="cabecalho-menu">comandos</a>
+<a  class="cabecalho-menu-itens">Comunidade Balle Bot</a>
+<a  class="cabecalho-menu-itens">Tutorial</a>
+<a  class="cabecalho-menu-itens">Open Source</Source></a>
+<a  class="cabecalho-menu-itens">comandos</a>
 
 </nav>
     </header>
@@ -22,9 +23,9 @@
 
 <section class="conteudo-principal">
 <div class="conteudo-principal-escrito">
-    <h1 class="conteudo-principal-escrito">Balle Bot</h1>
-    <h2 class="conteudo-principal-escrito">Deixe sua comunidade segura de um jeito fácil</h2>
-    <button class="conteudo-principal-escrito">Me adicione</button>
+    <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
+    <h2 class="conteudo-principal-escrito-subtitulo">Deixe sua comunidade segura de um jeito fácil</h2>
+    <button class="conteudo-principal-escrito-botao">Me adicione</button>
 </div>
 <img class="conteudo-principal-escrito"src="imge/Group 4.png" alt="imagem da ballebot">
 
