--- a/pages/pag_curso/portf.html
+++ b/pages/pag_curso/portf.html
@@ -15,7 +15,7 @@
         <div class="header">
             <div class="checkbox-conteiner">
                 <div class="checkbox-wrapper">
-                  <input type="checkbox" id="toggle">
+                    <input type="checkbox" id="toggle">
                     <label class="checkbox" for="toggle">
 
                         <div class="trace"></div>
@@ -41,23 +41,65 @@
                 </div>
             </div>
         </div>
-        <h1>Danil Gomes dos Santos </h1>
-        <h2>Front-end dev</h2>
+        <h1>Daniel Santos </h1>
+        <h2>Dev Front-end</h2>
         <div class="social-media">
             <a href="#">LINKEDIN</a>
             <a href="#">GITHUB</a>
         </div>
-
     </header>
 
-    <main class="conteiner">
+    <main class="container">
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 1</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+
+        <div class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
+            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+            quia id!
+        </div>
+    </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 2</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+        <div class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
+            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+            quia id!
+        </div>
+    </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 3</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+        <div class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
+            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+            quia id!
+        </div>
+    </div>
+
+
+
 
 
     </main>
 
 
     <footer class="footer">
-
+Feito por Daniel Santos 
     </footer>
 
 
