--- a/pages/pag_modulos/land.html
+++ b/pages/pag_modulos/land.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balle Bot - Modere a sua comunodade do Discord</title>
-    <link rel="stylesheet" type="text/css" href="style_land.css">
+    <link rel="stylesheet" type="text/css" href="land.css">
 </head>
 
 <body>
