Novo gerenciamneto de pasta

--- a/desenvolvimento web/land/land.html
+++ b/desenvolvimento web/land/land.html
@@ -22,13 +22,13 @@
     <main class="conteudo">
 
 <section class="conteudo-principal">
-<div class="conteudo-principal-escrito">
+<div class="conteudo-principal-escrito">Daniel Santos
     <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
     <h2 class="conteudo-principal-escrito-subtitulo">Deixe sua comunidade segura de um jeito fácil</h2>
     <button class="conteudo-principal-escrito-botao">Me adicione</button>
 </div>
 <img class="conteudo-principal-escrito"src="imge/Group 4.png" alt="imagem da ballebot">
-
+Daniel Santos
 </section>
 
 <section class="conteudo-secundario">
