--- a/desenvolvimento web/pag_curso/img/guanabara.html
+++ b/desenvolvimento web/pag_curso/img/guanabara.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
+    <link rel="stylesheet" href="guanabara.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test01.css">
-    <title>Pagina test</title>
-</head>
 
+    <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
+    <title>Primeira página web</title>
+
+</head>
 <body>
-    <header>
-        <nav>
+    <header class="header-container">
+        <nav class="header">
             <a href="">Menu</a>
             <a href="">Configurações</a>
             <a href="">Sobre</a>
@@ -20,7 +23,7 @@
 
     <main class="Conteudo">
 
-        <section>
+        <section class="conteudo-text">
             <div>
                 <h1>Treino de construção de paginas
                     web
