--- a/desenvolvimento web/treino_pag/guanabara.html
+++ b/desenvolvimento web/treino_pag/guanabara.html
@@ -32,7 +32,8 @@
         </section>
 
         <section>
-            <h2>conteudo</h2>
+            <h2>Conteudo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea obcaecati sunt at labore dolores id placeat, distinctio inventore similique delectus quasi illum rem suscipit eveniet laborum rerum officia aperiam consequatur.</p>
 
         </section>
 
