--- a/desenvolvimento web/treino_pag/guanabara.html
+++ b/desenvolvimento web/treino_pag/guanabara.html
@@ -7,40 +7,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="shortcut icon" href="img/Cornmanthe3rd-Plex-Other-html-5.ico" type="image/x-icon">
-    <title>Primeira página web</title>
+    <title>Flexbox</title>
 
 </head>
+
 <body>
-    <header class="header-container">
-        <nav class="header">
-            <a href="">Menu</a>
-            <a href="">Configurações</a>
-            <a href="">Sobre</a>
-        </nav>
-    </header>
-
-    <main class="Conteudo">
-
-        <section class="conteudo-text">
+    <section id="hero">
+        <div class="hero conteiner">
             <div>
-                <h1>Treino de construção de paginas
-                    web
-                </h1>
+                <h1>Hello <span></span></h1>
+                <h1>My Name is <span></span></h1>
+                <h1>Daniel <span></span></h1>
+                <a href="#" type="button" class="cta">Portfolio</a>
+
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section>
-            <h2>Conteudo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea obcaecati sunt at labore dolores id placeat, distinctio inventore similique delectus quasi illum rem suscipit eveniet laborum rerum officia aperiam consequatur.</p>
-
-        </section>
-
-        <footer>
-            <p>final</p>
-        </footer>
-    </main>
 </body>
 
 </html>
