--- a/desenvolvimento web/treino_pag/guanabara.html
+++ b/desenvolvimento web/treino_pag/guanabara.html
@@ -16,7 +16,7 @@
     <section id="hero">
         <div class="hero conteiner">
             <div>
-                <h1>Hello <span></span></h1>
+                <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>
                 <h1>Daniel <span></span></h1>
                 <a href="#" type="button" class="cta">Portfolio</a>
@@ -25,6 +25,66 @@
         </div>
     </section>
 
+
+    <section id="services">
+        <div class="services conteiner">
+            <div class="service-top">
+                <div class="services-bottom">
+                    <h1 class="section-title">Serv<span>i</span>ces</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias sunt beatae, quis quasi
+                        molestiae delectus cumque debitis illum maxime corrupti recusandae impedit officia quaerat
+                        quisquam atque dolorem. Tempora, ab totam.</p>
+                </div>
+               <div class="services-bottom"> 
+                    <div class="services-item">
+                        <div class="icon"><img src="img/icons8-gear-50.png"></img></div>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis et tempore ex eveniet quos
+                        molestias soluta ut enim. Suscipit, dolorum ratione a nihil eaque fugiat dolor aut vitae aperiam
+                        recusandae!</p>
+                </div>
+                <div class="services-bottom"> 
+                    <div class="services-item">
+                        <div class="icon"><img src="img/icons8-gear-50.png"></img></div>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis et tempore ex eveniet quos
+                        molestias soluta ut enim. Suscipit, dolorum ratione a nihil eaque fugiat dolor aut vitae aperiam
+                        recusandae!</p>
+                </div>
+                <div class="services-bottom"> 
+                    <div class="services-item">
+                        <div class="icon"><img src="img/icons8-gear-50.png"></img></div>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis et tempore ex eveniet quos
+                        molestias soluta ut enim. Suscipit, dolorum ratione a nihil eaque fugiat dolor aut vitae aperiam
+                        recusandae!</p>
+                </div>
+                <div class="services-bottom"> 
+                    <div class="services-item">
+                        <div class="icon"><img src="img/icons8-gear-50.png"></img></div>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis et tempore ex eveniet quos
+                        molestias soluta ut enim. Suscipit, dolorum ratione a nihil eaque fugiat dolor aut vitae aperiam
+                        recusandae!</p>
+                </div>
+                <div class="services-bottom"> 
+                    <div class="services-item">
+                        <div class="icon"><img src="img/icons8-gear-50.png"></img></div>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis et tempore ex eveniet quos
+                        molestias soluta ut enim. Suscipit, dolorum ratione a nihil eaque fugiat dolor aut vitae aperiam
+                        recusandae!</p>
+                </div>
+            </div>
+        </div>
+        
+        </div>
+    </section>
 </body>
 
 </html>
