--- a/desenvolvimento web/treino_pag/cont.html
+++ b/desenvolvimento web/treino_pag/cont.html
@@ -12,7 +12,7 @@
 
     <div class="conteiner">
 
-        <h1>Entrada</h1>
+        <h1>Bachgraund-position</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, placeat. Officiis, dolor eum. Repellat hic quidem nisi libero earum assumenda inventore vero, ipsum rem velit quam quaerat porro quos praesentium!</p>
     </div>
     
