--- a/desenvolvimento web/treino_pag/cont.html
+++ b/desenvolvimento web/treino_pag/cont.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cont.css">
-    <title>Document</title>
+    <title>EVA</title>
 </head>
 <body>
-
 
     <div class="conteiner">
 
         <h1>Bachgraund-position</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, placeat. Officiis, dolor eum. Repellat hic quidem nisi libero earum assumenda inventore vero, ipsum rem velit quam quaerat porro quos praesentium!</p>
+        <hr>
     </div>
+    <div class="cursor"></div>
+    <script src="app.js"></script>
     
-
-
+    <section></section>
 </body>
 </html>
