--- a/desenvolvimento web/treino_pag/cont.html
+++ b/desenvolvimento web/treino_pag/cont.html
@@ -9,15 +9,12 @@
 </head>
 <body>
 
-    <div class="conteiner">
-
-        <h1>Bachgraund-position</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, placeat. Officiis, dolor eum. Repellat hic quidem nisi libero earum assumenda inventore vero, ipsum rem velit quam quaerat porro quos praesentium!</p>
-        <hr>
-    </div>
+    <section class="conteiner">
+        <h1>Hello Word</h1>
+    </section>
     <div class="cursor"></div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
     
-    <section></section>
+     
 </body>
 </html>
