--- a/desenvolvimento web/land/land.html
+++ b/desenvolvimento web/land/land.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imge/Vector.png" alt="logo da cominidade Ballerine">
+        <img class="cabecalho-imagem" src="img/Vector.png" alt="logo da cominidade Ballerine">
 <nav class="cabecalho-menu">
 <a  class="cabecalho-menu-itens">Comunidade Balle Bot</a>
 <a  class="cabecalho-menu-itens">Tutorial</a>
@@ -22,13 +22,13 @@
     <main class="conteudo">
 
 <section class="conteudo-principal">
-<div class="conteudo-principal-escrito">Daniel Santos
+<div class="conteudo-principal-escrito">
     <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
     <h2 class="conteudo-principal-escrito-subtitulo">Deixe sua comunidade segura de um jeito fácil</h2>
     <button class="conteudo-principal-escrito-botao">Me adicione</button>
 </div>
-<img class="conteudo-principal-escrito"src="imge/Group 4.png" alt="imagem da ballebot">
-Daniel Santos
+<img class="conteudo-principal-escrito"src="img/Group 4.png" alt="imagem da ballebot">
+
 </section>
 
 <section class="conteudo-secundario">
@@ -41,7 +41,7 @@ Daniel Santos
     </main>
 
     <footer class="rodape">
-<img class="rodape-imagem" src="imge/BALLERINI.svg" alt="">
+<img class="rodape-imagem" src="img/BALLERINI.svg" alt="">
     </footer>
     
 </body>
