--- a/desenvolvimento web/treino_pag/cont.html
+++ b/desenvolvimento web/treino_pag/cont.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cont.css">
+    <script>
+       
+    </script>
     <title>EVA</title>
 </head>
 <body>
-
+    <button onclick="window.print()">Print this page</button>
     <section class="conteiner">
         <h1>Hello Word</h1>
     </section>
