--- a/desenvolvimento web/portfolio/portf.html
+++ b/desenvolvimento web/portfolio/portf.html
@@ -58,12 +58,13 @@
                 </div>
             </div>
 
-        <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
-            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
-            quia id!
+            <div class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo
+                rem,
+                ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+                quia id!
+            </div>
         </div>
-    </div>
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
@@ -71,12 +72,13 @@
                     <p>Vem ver!</p>
                 </div>
             </div>
-        <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
-            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
-            quia id!
+            <div class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo
+                rem,
+                ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+                quia id!
+            </div>
         </div>
-    </div>
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
@@ -84,22 +86,17 @@
                     <p>Vem ver!</p>
                 </div>
             </div>
-        <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo rem,
-            ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
-            quia id!
+            <div class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ut tempore magni minus in explicabo
+                rem,
+                ex aperiam illum inventore error sapiente exercitationem, corrupti commodi assumenda perferendis maiores
+                quia id!
+            </div>
         </div>
-    </div>
-
-
-
-
-
     </main>
 
-
     <footer class="footer">
-Feito por Daniel Santos 
+        Feito por Daniel Santos
     </footer>
 
 
