--- a/desenvolvimento web/cadastro dev/index.html
+++ b/desenvolvimento web/cadastro dev/index.html
@@ -5,82 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Cadrastro</title>
+    <link rel="stylesheet" href="styleb.css">
+    <title>Cadrastro dev</title>
 </head>
 
 <body>
-    <div>
-        <h1 id="titulo">Cadastro de DEVs</h1>
-        <p id="subtitulo">Complete suas inforamações</p>
-        <br>
+
+    <div class="box">
+        <form action="">
+            <fieldset>
+                <legend><b>Fórmulário de Clíente</b></legend>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="name" id="name" class="InputUser" required>
+                    <label for="name" class="labelInput">Nome</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="email" name="email" id="email" class="inputUser" required>
+                    <label for="email" class="labelInput">Email</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="tel" name="telefone" id="telefone" class="inputUser" required>
+                    <label for="telefone" class="labelInput">Telefone</label>
+                </div>
+                <br>
+                <p>Sexo:</p>
+                <input type="radio" id="feminino" name="genero" value="feminino" required>
+                <label for="feminino" >Feminino</label>
+                <br>
+                <input type="radio" id="masculino" name="genero" value="masculino" required>
+                <label for="masculino">Masculino</label>
+                <br>
+                <input type="radio" id="outro" name="genero" value="outro" required>
+                <label for="outro">Outro</label>
+                <br><br>
+
+                 <label for="data_nacimento">Data de Nacimento</label>
+                <input type="date" name="data_nacimento" id="data_nacimento" required>
+                <br><br>
+
+                <div class="inputBox">
+                    <input type="text" name="cidade" id="cidade" class="inputUser" required>
+                    <label for="cidade" class="labelInput">Cidade</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="Estado" id="estado" class="inputUser" required>
+                    <label for="estado" class="labelInput">Estado</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="text" name="endereco" id="endereco" class="inputUser" required>
+                    <label for="endereco" class="labelInput">Endereço</label>
+                </div>
+                <br><br>
+                <input type="submit" name="submit" id="submit">
+
+
+            </fieldset>
+        </form>
     </div>
-
-    <form>
-        <fieldset class="grupo">
-            <div>
-                <label for="Nome"></label>
-                <input type="text" nome="nome" id="nome" required>
-            </div>
-            <div>
-                <label for="Sobrenome"></label>
-                <input type="text" nome="sobrenome" id="sobrenome" required>
-            </div>
-        </fieldset>
-
-        <div class="campo">
-            <label for="Email"></label>
-            <input type="email" nome="email" id="email" required>
-        </div>
-        <div>
-            <label>De qual lado da aplicaação você desenvolve? </label>
-
-            <label>
-                <input type="radio" name="devweb" volue="frontend" checked> Front-end
-            </label>
-            <label>
-                <input type="radio" name="devweb" volue="backend"> Back-end
-            </label>
-            <label for="">
-                <input type="radio" name="devweb" volue="fullstack"> Full stack
-            </label>
-        </div>
-
-        <div class="campo">
-            <label for="senioridade"><Strong>Senioridade</Strong></label>
-            <select id="senioridade">
-                <option selected disabled volue="">Escolha</option>
-                <option>Junior</option>
-                <option>Pleno</option>
-                <option>Senior</option>
-            </select>
-        </div>
-        <fieldset class="grupo">
-            <div id="check">
-                <label> Selecione as tecnologias que você utiliza</label><br><br>
-                <input type="checkbox" id="tecnologia1" nome="tecnologia1" value="HTML">
-                <label for="tecnologia1">HTML</label>
-                <input type="checkbox" id="tecnologia1" nome="tecnologia2" value="CSS">
-                <label for="tecnologia2">CSS</label>
-                <input type="checkbox" id="tecnologia1" nome="tecnologia3" value="Javascript">
-                <label for="tecnologia3
-                De qual lado da aplicaação você desenvolve? ￼ Front-end ￼ Back-"></label>Javascript
-                <input type="checkbox" id="tecnologia1" nome="tecnologia4" value="PHP">
-                <label for="tecnologia4"></label>PHP
-                <input type="checkbox" id="tecnologia1" nome="tecnologia5" value="C#">
-                <label for="tecnologia5"></label>C#
-                <input type="checkbox" id="tecnologia1" nome="tecnologia6" value="Python">
-                <label for="tecnologia6"></label>Python
-            </div>
-        </fieldset>
-        <div class="campo">
-            <br>
-            <label> Conte um pouco da sua experiêcia:</label>
-            <textarea name="experiencia" id="experiencia" rows="6" style="width: 26em;"></textarea>
-        </div>
-        <button class="button" type="submit">Comcluido</button>
-    </form>
-
 
 </body>
 
