--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Works</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Work spacing</h1>
+    <h1>Work spacin</h1>
+    <div class="hero">
+        <nav>
+            <ul>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">FlexBox</a></li>
+                <li><a href="#">Landpage</a></li>
+                <li><a href="#">Front-Push</a></li>
+                <li><a href="#">Pixel Art</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
