--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="hero">
         <nav>
             <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">FlexBox</a></li>
-                <li><a href="#">Landpage</a></li>
-                <li><a href="#">Front-Push</a></li>
-                <li><a href="#">Pixel Art</a></li>
+                <li><a href="/desenvolvimentoWeb/login-dev/index.html">Login</a></li>
+                <li><a href="/desenvolvimentoWeb/flexbox_grid/pag.html">FlexBox</a></li>
+                <li><a href="/desenvolvimentoWeb/landpage/land.html">Landpage</a></li>
+                <li><a href="/desenvolvimentoWeb/front-push/index.html">Front-Push</a></li>
+                <li><a href="/desenvolvimentoWeb/web/index.html">Pixel Art</a></li>
             </ul>
         </nav>
     </div>
