--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Work spacin</h1>
+    <h1>Work State</h1>
     <div class="hero">
         <nav>
             <ul>
-                <li><a href="/desenvolvimentoWeb/login-dev/index.html">Login</a></li>
-                <li><a href="/desenvolvimentoWeb/flexbox_grid/pag.html">FlexBox</a></li>
-                <li><a href="/desenvolvimentoWeb/landpage/land.html">Landpage</a></li>
-                <li><a href="/desenvolvimentoWeb/front-push/index.html">Front-Push</a></li>
-                <li><a href="/desenvolvimentoWeb/web/index.html">Pixel Art</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">FlexBox</a></li>
+                <li><a href="#">Landpage</a></li>
+                <li><a href="#">Front-Push</a></li>
+                <li><a href="#">Pixel Art</a></li>
             </ul>
         </nav>
     </div>
