--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Work State</h1>
-    <div class="hero">
-        <nav>
-            <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">FlexBox</a></li>
-                <li><a href="#">Landpage</a></li>
-                <li><a href="#">Front-Push</a></li>
-                <li><a href="#">Pixel Art</a></li>
-            </ul>
-        </nav>
-    </div>
+    <section class="hero">
+        <div class="main-width">
+            <header>
+                <div class="logo">
+                    <h2><a href="#">Work State</a></h2>
+                </div>
+                <nav>
+                    <ul>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Tecnologia</a></li>
+                        <li><a href="#">Portfólio</a></li>
+                        <li class="btn"><a href="#">Blog</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </section>
+    
 </body>
 </html>
