--- a/index.html
+++ b/index.html
@@ -13,19 +13,28 @@
         <div class="main-width">
             <header>
                 <div class="logo">
-                    <h2><a href="#">Work State</a></h2>
+                    <h2><a href="/">Work State</a></h2>
+
                 </div>
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Tecnologia</a></li>
-                        <li><a href="#">Portfólio</a></li>
-                        <li class="btn"><a href="#">Blog</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li class="btn"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </header>
+        <div class="content">
+            <div class="main-text">
+                <h1>FRONT END DEVELOPER </h1>
+                <h2>like</h2>
+            </div>
         </div>
+
+        </div>
+    </div>
     </section>
     
 </body>
