--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="/web-site/pag.html">Gallery</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li class="btn"><a href="#">Contact</a></li>
