--- a/web-site/index.html
+++ b/web-site/index.html
@@ -37,12 +37,12 @@
              <p>Legendas</p>
          </div>
          <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+            <a href="/javaScript/curso/index.html"> <img src="img/drn.jpg">
              </a>
              <p>Legendas</p>
          </div>
          <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+            <a href="/javaScript/Treejs/index.html"> <img src="img/drn.jpg">
              </a>
              <p>Legendas</p>
          </div>
