--- a/javaScript/curso/index.html
+++ b/javaScript/curso/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Javascript</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+
+   
 
 </head>
 
 <body>
-    <h1>Work State</h1>
-
+    <h1>Work State javascript</h1>
 
     <!--link js-->
     <script src='script.js'></script>
