--- a/web-site/index.html
+++ b/web-site/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <h1>Section Flexbox</h1>
+    <h1>Web Sites</h1>
 
     <section class="flex">
         <div>
@@ -61,16 +61,16 @@
 
     </section>
 
-    <h1>Section Grid 1</h1>
+    <h1>Web Login</h1>
 
     <section class="grid1">
         <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+            <a href="/javaScript/projetos/projeto1/index.html"> <img src="img/drn.jpg">
              </a>
              <p>Legendas</p>
          </div>
          <div>
-             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+             <a href="/javaScript/projetos/projeto2/index.html"> <img src="img/drn.jpg">
               </a>
               <p>Legendas</p>
           </div>
@@ -118,7 +118,7 @@
 
     </section>
 
-    <h1>Section Grid 2</h1>
+    <h1>Pixel Art</h1>
 
     <section class="grid2">
 
