--- a/web-site/index.html
+++ b/web-site/index.html
@@ -29,27 +29,27 @@
         <div>
            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
             </a>
-            <p>Legendas</p>
+            <p>flexbox 01</p>
         </div>
         <div>
             <a href="/web-site/flexbox_grid/teste02/index.html"> <img src="img/drn.jpg">
              </a>
-             <p>Legendas</p>
+             <p>flexbox 02</p>
          </div>
          <div>
             <a href="/javaScript/curso/index.html"> <img src="img/drn.jpg">
              </a>
-             <p>Legendas</p>
+             <p>Js</p>
          </div>
          <div>
             <a href="/javaScript/Treejs/index.html"> <img src="img/drn.jpg">
              </a>
-             <p>Legendas</p>
+             <p>Tree.js</p>
          </div>
          <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+            <a href="/web-site/front-push/index.html"> <img src="img/drn.jpg">
              </a>
-             <p>Legendas</p>
+             <p>front-Push</p>
          </div>
          <div>
             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
