--- a/web-site/index.html
+++ b/web-site/index.html
@@ -25,12 +25,19 @@
 
     <h1>Web Sites</h1>
 
-    <section class="flex">
-        <div>
-           <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-            </a>
-            <p>flexbox 01</p>
+    <div class="container">
+        <div class="card">
+            <div class="imgBx">
+                <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+                 </a>
+            </div>
+            <div class="content">
+                <h2>Card one</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quaerat totam reiciendis aspernatur dicta, autem nemo impedit? Magnam inventore expedita porro, corporis pariatur cupiditate. Quos illo similique magni ducimus obcaecati.</p>
+            </div>
         </div>
+    </div>
+    <section class="flex ">
         <div>
             <a href="/web-site/flexbox_grid/teste02/index.html"> <img src="img/drn.jpg">
              </a>
