--- a/web-site/index.html
+++ b/web-site/index.html
@@ -12,36 +12,30 @@
 </head>
 
 <body>
-    <header class="header">
-        <a href="/">Logo</a>
-        <nav>
-            <ul class="menu">
-                <li><a href="/">Sobre</a></li>
-                <li><a href="/">Produtos</a></li>
-                <li><a href="/">Contatos</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section class="hero">
+        <div class="main-width">
+            <header>
+                <div class="logo">
+                    <h2><a href="/">Work State</a></h2>
+                </div>
+                <nav>
+                    <ul class="menu">
+                        <li class="active" ><a href="/">Home</a></li>
+                        <li><a href="/">Produtos</a></li>
+                        <li><a href="/">Sobre</a></li>
+                        <li class="btn"><a href="/">Contatos</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </section>
 
     <h1>Web Sites</h1>
-
-    <div class="container">
-        <div class="card">
-            <div class="imgBx">
-                <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-                 </a>
-            </div>
-            <div class="content">
-                <h2>Card one</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quaerat totam reiciendis aspernatur dicta, autem nemo impedit? Magnam inventore expedita porro, corporis pariatur cupiditate. Quos illo similique magni ducimus obcaecati.</p>
-            </div>
-        </div>
-    </div>
     <section class="flex ">
         <div>
             <a href="/web-site/flexbox_grid/teste02/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>flexbox 02</p>
+            </a>
+            <p>flexbox 02</p>
          </div>
          <div>
             <a href="/javaScript/curso/index.html"> <img src="img/drn.jpg">
@@ -49,24 +43,63 @@
              <p>Js</p>
          </div>
          <div>
-            <a href="/javaScript/Treejs/index.html"> <img src="img/drn.jpg">
+             <a href="/javaScript/Treejs/index.html"> <img src="img/drn.jpg">
              </a>
              <p>Tree.js</p>
-         </div>
-         <div>
-            <a href="/web-site/front-push/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>front-Push</p>
-         </div>
-         <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>
+            </div>
+            <div>
+                <a href="/web-site/front-push/index.html"> <img src="img/drn.jpg">
+                </a>
+                <p>front-Push</p>
+            </div>
+            <div>
+                <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+                </a>
+                <p>Legendas</p>
+            </div>
+        </section>
 
+        <h1>Animations</h1>
         
+        <section class="card-container">
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+                         </a>
+                    </div>
+                    <div class="content">
+                        <h2>Card one</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quaerat totam reiciendis aspernatur dicta, autem nemo impedit? Magnam inventore expedita porro, corporis pariatur cupiditate. Quos illo similique magni ducimus obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+                         </a>
+                    </div>
+                    <div class="content">
+                        <h2>Card one</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quaerat totam reiciendis aspernatur dicta, autem nemo impedit? Magnam inventore expedita porro, corporis pariatur cupiditate. Quos illo similique magni ducimus obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="imgBx">
+                        <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
+                         </a>
+                    </div>
+                    <div class="content">
+                        <h2>Card one</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quaerat totam reiciendis aspernatur dicta, autem nemo impedit? Magnam inventore expedita porro, corporis pariatur cupiditate. Quos illo similique magni ducimus obcaecati.</p>
+                    </div>
+                </div>
+            </div>
 
-    </section>
+        </section>
 
     <h1>Web Login</h1>
 
