--- a/web-site/flexbox_grid/teste02/index.html
+++ b/web-site/flexbox_grid/teste02/index.html
@@ -70,9 +70,34 @@
             <div class="items">1</div>
             <div class="items">2</div>
             <div class="items">3</div>
+        </section>
 
+        <h1>Flex-wrap: nowrap</h1>
+        <section>
+            <div class="items">1</div>
+            <div class="items">2</div>
+            <div class="items">3</div>
+        </section>
+         <h1>Flex-wrap: wrap</h1>
+        <section>
+            <div class="items">1</div>
+            <div class="items">2</div>
+            <div class="items">3</div>
+        </section>
+         <h1>Flex-wrap: wrap-reverse</h1>
+        <section>
+            <div class="items">1</div>
+            <div class="items">2</div>
+            <div class="items">3</div>
+        </section>
+         <h1>Flex-wrap: nowrap</h1>
+        <section>
+            <div class="items">1</div>
+            <div class="items">2</div>
+            <div class="items">3</div>
         </section>
     </div>
+
 </body>
 
 </html>
