--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="/web-site/index.html">Gallery</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="/web-project/index.html">Portfolio</a></li>
                         <li class="btn"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
