--- a/web-javascript/Treejs/index.html
+++ b/web-javascript/Treejs/index.html
@@ -9,7 +9,7 @@
     <script src='script.js'></script>
 </head>
 <body>
-    <h1>Project one</h1>
+    <h1>Project ones</h1>
 
     <script src="js/three.js"></script>
 </body>
