--- a/web-site/flexbox_grid/teste01/index.html
+++ b/web-site/flexbox_grid/teste01/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,27 +9,60 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
-    <header class="header">
-        <div class="logo">
-            <h1>Goku</h1>
-            <div class="container">
-                <div class="menu">
-                    <div class="items">
-                        <ul>
-                            <li class="active"><a href  ="">Home</a></li>
-                            <li><a href="">Project</a></li>
-                            <li><a href="">About</a></li>
-                            <li class="btn"><a href="">Contacts</a></li>
-                        </ul>
-                    </div>
+    <section class="hero">
+        <div class="main">
+            <header>
+                <div class="logo">
+                    <h1><a href="">Kame</a></h1>
                 </div>
-                <div>
-                    <h1>Casa do Mestre kame</h1>
-                </div>
-            </div>
+
+                <nav>
+                    <ul>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Code</a></li>
+                        <li><a href="#">About</a></li>
+                        <li class="btn"><a href="#">Contacts</a></li>
+                </nav>
+
+            </header>
         </div>
-    </header>
-    
+    </section>
+
+    <section>
+        <div>
+            <h2>DRAGON BALL</h2>
+        </div>
+<div class="container">
+    <div class="cards">
+        <div class="card">
+            <h3>hero</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit deleniti numquam a qui obcaecati error
+                doloribus doloremque nulla pariatur incidunt, ipsum culpa esse fugit sunt nemo, omnis fugiat, cum officiis.
+            </p>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="card">
+            <h3>hero</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit deleniti numquam a qui obcaecati error
+                doloribus doloremque nulla pariatur incidunt, ipsum culpa esse fugit sunt nemo, omnis fugiat, cum officiis.
+            </p>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="card">
+            <h3>hero</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit deleniti numquam a qui obcaecati error
+                doloribus doloremque nulla pariatur incidunt, ipsum culpa esse fugit sunt nemo, omnis fugiat, cum officiis.
+            </p>
+        </div>
+    </div>
+</div>
+    </section>
+
 </body>
+
 </html>
