--- a/web-site/web-food/index.html
+++ b/web-site/web-food/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="container-box">
-            <div class="c-mainbox">
+            <div class="c-mainbx">
                 <div class="container-img">
                     <img src="/web-site/web-food/img/b1.png">
                 </div>
@@ -61,7 +61,7 @@
                     <p>Tasty & Fresh Food</p>
                 </div>
             </div>
-            <div class="c-mainbox">
+            <div class="c-mainbx">
                 <div class="container-img">
                     <img src="/web-site/web-food/img/b2.png">
                 </div>
@@ -69,7 +69,7 @@
                     <p>Tasty & Fresh Food</p>
                 </div>
             </div>
-            <div class="c-mainbox">
+            <div class="c-mainbx">
                 <div class="container-img">
                     <img src="/web-site/web-food/img/b3.png">
                 </div>
@@ -77,7 +77,7 @@
                     <p>Tasty & Fresh Food</p>
                 </div>
             </div>
-            <div class="c-mainbox">
+            <div class="c-mainbx">
                 <div class="container-img">
                     <img src="/web-site/web-food/img/b4.png">
                 </div>
@@ -88,6 +88,18 @@
         </div>
     </section>
 
+    <!---About  section-->
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="img/about.png">
+    </div>
+
+    <div class="about-text">
+        <h2>The Healthy Food <br> For walthy Mood</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut possimus ipsam iste itaque minus reprehenderit iure. Itaque, quod consequatur rem vero laboriosam rerum accusamus quaerat voluptates. Laudantium harum asperiores accusantium.</p>
+        <a href="#" class="btn">Book a Table</a>
+    </div>
+</section>
     <!---custom js link-->
     <script type="text/javascript" src="js/script.js">label</script>
 </body>
