--- a/web-site/web-food/index.html
+++ b/web-site/web-food/index.html
@@ -35,7 +35,7 @@
     <!---home section-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1><span>Welcome</span> to the word of Tasty & Fresh Food</h1>
+            <h1><span>Welcome</span>to a world of fresh and tasty food</h1>
             <p>Molestie ac feugiat sed lectus. Cursus sit amet <br> dictum sit amet.
                 Egestas diam in arcu</p>
             <a href="#" class="btn">Book a Table</a>
