--- a/web-site/web-food/index.html
+++ b/web-site/web-food/index.html
@@ -89,17 +89,150 @@
     </section>
 
     <!---About  section-->
-<section class="about" id="about">
-    <div class="about-img">
-        <img src="img/about.png">
-    </div>
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png">
+        </div>
 
-    <div class="about-text">
-        <h2>The Healthy Food <br> For walthy Mood</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut possimus ipsam iste itaque minus reprehenderit iure. Itaque, quod consequatur rem vero laboriosam rerum accusamus quaerat voluptates. Laudantium harum asperiores accusantium.</p>
-        <a href="#" class="btn">Book a Table</a>
+        <div class="about-text">
+            <h2>The Healthy Food <br> For walthy Mood</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut possimus ipsam iste itaque minus
+                reprehenderit iure. Itaque, quod consequatur rem vero laboriosam rerum accusamus quaerat voluptates.
+                Laudantium harum asperiores accusantium.</p>
+            <a href="#" class="btn">Book a Table</a>
+        </div>
+    </section>
+
+    <!---Menu  section-->
+    <section class="menu" id="menu">
+        <div class="main-text">
+            <h2>Most Popular Dishes</h2>
+            <p>Consectetur numquam poro nemo veniam <br> eligendi rem adipisci quo modi.</p>
+        </div>
+        <div class="menu-content">
+            <div class="row">
+                <img src="img/m1.jpg">
+                <div class="menu-text">
+                    <div class="menu-left">
+                        <h4>Saumon Gravlax</h4>
+                    </div>
+                    <div class="menu-right">
+                        <h5>$15</h5>
+                    </div>
+                </div>
+                <p>Molestie ac feugiat sed lectus. Cursus sit amet <br> dictum sit amet.
+                    Egestas diam in arcu</p>
+                <div class="star">
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="img/m2.jpg">
+                <div class="menu-text">
+                    <div class="menu-left">
+                        <h4>Saumon Gravlax</h4>
+                    </div>
+                    <div class="menu-right">
+                        <h5>$15</h5>
+                    </div>
+                </div>
+                <p>Molestie ac feugiat sed lectus. Cursus sit amet <br> dictum sit amet.
+                    Egestas diam in arcu</p>
+                <div class="star">
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="img/m3.jpg">
+                <div class="menu-text">
+                    <div class="menu-left">
+                        <h4>Saumon Gravlax</h4>
+                    </div>
+                    <div class="menu-right">
+                        <h5>$15</h5>
+                    </div>
+                </div>
+                <p>Molestie ac feugiat sed lectus. Cursus sit amet <br> dictum sit amet.
+                    Egestas diam in arcu</p>
+                <div class="star">
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <img src="img/m4.jpg">
+                <div class="menu-text">
+                    <div class="menu-left">
+                        <h4>Saumon Gravlax</h4>
+                    </div>
+                    <div class="menu-right">
+                        <h5>$15</h5>
+                    </div>
+                </div>
+                <p>Molestie ac feugiat sed lectus. Cursus sit amet <br> dictum sit amet.
+                    Egestas diam in arcu</p>
+                <div class="star">
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                    <a href="#"><i class="bx bxs-star"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---Menu  section-->
+    <section class="contact" id="contact">
+        <div class="main-contact">
+            <div class="contact-content">
+                <h4>Services</h4>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </div>
+            <div class="contact-content">
+                <h4>Partner</h4>
+                <li><a href="#home">Food Panda</a></li>
+                <li><a href="#about">Foodie</a></li>
+                <li><a href="#menu">Food Fun</a></li>
+                <li><a href="#contact">Fresh Food</a></li>
+            </div>
+            <div class="contact-content">
+                <h4>Contact</h4>
+                <li><a href="#home">Contact Us</a></li>
+                <li><a href="#about">Press Center</a></li>
+                <li><a href="#menu">Careers</a></li>
+                <li><a href="#contact">Faq</a></li>
+            </div>
+            <div class="contact-content">
+                <h4>Follow Us</h4>
+                <li><a href="#home">Facebook</a></li>
+                <li><a href="#about">Instagram</a></li>
+                <li><a href="#menu">Pinterest</a></li>
+            </div>
+        </div>
+    </section>
+
+    <div class="last-text">
+        <p> 2022 FoodFun. all Rights Reserved by Daniel Gomes</p>
     </div>
-</section>
+    <!--scroll top-->
+    <a href="#home" class="scroll-top">
+        <i class="bx bx-up-arrow-alt"></i>
+    </a>
     <!---custom js link-->
     <script type="text/javascript" src="js/script.js">label</script>
 </body>
