--- a/web-project/curso/index.html
+++ b/web-project/curso/index.html
@@ -12,10 +12,13 @@
 
 </head>
 
-<body>
-    <h1>Work State javascript</h1>
+<body> 
+    <!--Cards-->
 
-    <!--link js-->
+
+
+
+   <!--link js-->
     <script src='script.js'></script>
 </body>
 
