--- a/web-site/web-food/index.html
+++ b/web-site/web-food/index.html
@@ -233,7 +233,11 @@
     <a href="#home" class="scroll-top">
         <i class="bx bx-up-arrow-alt"></i>
     </a>
+
+
     <!---custom js link-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    
     <script type="text/javascript" src="js/script.js">label</script>
 </body>
 
